test/Fail/LetAxiomInstance.err
LetAxiomInstance.agda:18.14-15: error: [MissingDefinitions]
The following names are declared but lack a definition:
x
when scope checking let instance x : Foo Nat in foo
